[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydevlib"
version = "1.0.4"
description = "Development tools for Alea Soluciones projects"
authors = [
    {name = "Bifer Team"}
]
requires-python = ">=3.8"
dependencies = [
    "mamba==0.11.3",
    "expects==0.9.0",
    "doublex-expects==0.7.1",
    "httmock==1.4.0",
    "pyDoubles==1.8.1",
    "PyHamcrest==2.1.0",
    "Faker==24.11.0",
    "deepdiff==8.6.1",
    "coverage==7.4.4",
    "pylint==3.1.0",
    "black==24.4.0",
    "mypy==1.9.0",
    "ipython==8.18.1",
    "ropevim==0.8.1",
]

[project.optional-dependencies]
dev = []

[project.urls]
[project.scripts]
pydevlib = "pydevlib.runner:pydevlib"
mambo = "pydevlib.runner:mambo"
git_hooks = "pydevlib.runner:git_hooks"
linter = "pydevlib.runner:linter"
type_checker = "pydevlib.runner:type_checker"
formatter = "pydevlib.runner:formatter"
focused_specs = "pydevlib.runner:focused_specs"
unit_tests = "pydevlib.runner:unit_tests"
integration_tests = "pydevlib.runner:integration_tests"
regression_tests = "pydevlib.runner:regression_tests"
factory_tests = "pydevlib.runner:factory_tests"
functional_tests = "pydevlib.runner:functional_tests"
acceptance_tests = "pydevlib.runner:acceptance_tests"
fast_tests = "pydevlib.runner:fast_tests"
all_tests = "pydevlib.runner:all_tests"

[tool.setuptools]
packages = {find = {exclude = ["tests", "specs", "integration_specs", "functional_specs", "acceptance_specs"]}}
platforms = ["Linux"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
